fix: overflow scroll issue fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,18 +9,22 @@
 html {
   margin: 0;
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
+  width: 100%;
+  height: 100%;
 }
 
 body,
 #__next {
-  height: 100%;
   width: 100%;
+  height: 100%;
+  background-color: black;
+  overflow: hidden;
 }
 
 .app-wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   position: relative;
 }
 
@@ -35,8 +39,7 @@ body,
 .webGl-canvas {
   width: 100%;
   height: 100%;
-  width: 100vw;
-  height: 100vh;
+  background-color: orange;
   overflow: hidden;
 }
 
